fixed login and signup page alignment issue almost

--- a/Static/css/style.css
+++ b/Static/css/style.css
@@ -17,29 +17,35 @@ body {
     height: 100vh;
 }
 
+
 /* Half of page for login page */
-.left-side {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;         
-  width: 50%;       
-  height: 100vh;    
-  background-color: #6e699b; 
-  z-index: -1;      
+.login-page {
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    min-height: 100vh;
+
+    background: linear-gradient(
+        to right,
+        #6e699b 50%,
+        #a2c8cd 50%
+    );
 }
 
 /* Half of page for sign up page */
-.right-side {
-  content: "";
-  position: fixed;
-  top: 0;
-  right: 0;         
-  width: 50%;       
-  height: 100vh;    
-  background-color: #6e699b; 
-  z-index: -1;      
+.signup-page {
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    min-height: 100vh;
+
+    background: linear-gradient(
+        to left,
+        #6e699b 50%,
+        #a2c8cd 50%
+    );
 }
+
 
 /* layout.html */
 .top-bar {
@@ -94,18 +100,13 @@ body {
     transition: transform 0.2s ease;
 }
 
-/* login.html */
+/* login/signup.html */
 .login-container {
     background-color: #92c9a9;
-    padding: 50px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 35px;
+    border-radius: 12px;
     width: 500px;
-    height: 500px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 }
 
 .login-container h2 {
